fix common styles on mobile

--- a/src/components/body/Body.module.scss
+++ b/src/components/body/Body.module.scss
@@ -57,7 +57,7 @@
 
   @include responsive('tablet', 'phone', 'phone-xs') {
     text-align: center;
-    margin: 178px 0 0 0;
+    margin: 140px 0 0 0;
 
     @include text('h3');
 
@@ -93,7 +93,7 @@
 
   @include responsive('tablet', 'phone', 'phone-xs') {
     @include text('h3');
-    margin-top: 98px;
+    margin-top: 90px;
   }
 }
 
@@ -151,7 +151,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 113px;
+  margin-top: 151px;
 }
 
 @-moz-keyframes bounce {
@@ -160,8 +160,8 @@
     transform: translateY(0);
   }
   40% {
-    -moz-transform: translateY(-20px);
-    transform: translateY(-20px);
+    -moz-transform: translateY(-15px);
+    transform: translateY(-15px);
   }
   60% {
     -moz-transform: translateY(-10px);
@@ -174,8 +174,8 @@
     transform: translateY(0);
   }
   40% {
-    -webkit-transform: translateY(-20px);
-    transform: translateY(-20px);
+    -webkit-transform: translateY(-15px);
+    transform: translateY(-15px);
   }
   60% {
     -webkit-transform: translateY(-10px);
@@ -190,10 +190,10 @@
     transform: translateY(0);
   }
   40% {
-    -moz-transform: translateY(-20px);
-    -ms-transform: translateY(-20px);
-    -webkit-transform: translateY(-20px);
-    transform: translateY(-20px);
+    -moz-transform: translateY(-15px);
+    -ms-transform: translateY(-15px);
+    -webkit-transform: translateY(-15px);
+    transform: translateY(-15px);
   }
   60% {
     -moz-transform: translateY(-10px);
