--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -11,7 +11,7 @@
   border-bottom: 1px solid var(--porcelain);
 
   @include responsive('phone', 'phone-xs', 'tablet') {
-    height: 85px;
+    height: 77px;
   }
 }
 
